--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -811,7 +811,7 @@ body.nav-opened .nav {
 	top:0;
 	left:0;
 	right:0;
-	height:54px;
+	height:66px;
 	border:none;
 	background:linear-gradient(to bottom,rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 100%);
 	background:rgba(0,0,0,0.8);
@@ -2261,4 +2261,7 @@ div#preloader {
 	line-height:30px;
 	padding:7px 12px;
 	height: 44px;
+}
+.nav-item {
+	float: right;
 }
