--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <header class="main-header " style="background-image: url(assets/img/image_10.png)">
       <div class="vertical">
         <div class="main-header-content inner">
-          <h1 class="page-title">PHO Coffee</h1>
+          <h1 class="page-title">KIM Coffee</h1>
           <div class="entry-title-divider">
             <span></span><span></span><span></span>
           </div>
@@ -28,8 +28,8 @@
               <div class="card-info">
                 <h4>TRÀ SỮA MẮC CA TRÂN CHÂU</h4>
                 <div class="price_product_item">50,000 đ</div>
-                <a class="btn-price" href="" target="_blank" title="Mua Ngay">Mua ngay</a>
-                <a class="btn-tht" href="">Tìm hiểu thêm</a>
+                
+                <a class="btn-tht" href="/listproduct">See More ----</a>
               </div>
             </div>
           </div>
@@ -42,11 +42,12 @@
               <div class="card-info">
                 <h4>TRÀ ĐÀO CAM SẢ</h4>
                 <div class="price_product_item">50,000 đ</div>
-                <a class="btn-price" href="" target="_blank" title="Mua Ngay">Mua ngay</a>
-                <a class="btn-tht" href="">Tìm hiểu thêm</a>
+                <a class="btn-tht" href="/listproduct">See More ----</a>
               </div>
             </div>
           </div>
+          
+      
           
           <div class="column">
             <div class="card">
@@ -56,22 +57,7 @@
               <div class="card-info">
                 <h4>Tra sau tran chau</h4>
                 <div class="price_product_item">50,000 đ</div>
-                <a class="btn-price" href="" target="_blank" title="Mua Ngay">Mua ngay</a>
-                <a class="btn-tht" href="">Tìm hiểu thêm</a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="column">
-            <div class="card">
-              <div class="card-img">
-              <img src="//product.hstatic.net/1000075078/product/latte-nong_ffcd92de11f74937bce4197823246d07_large.jpg">
-              </div>
-              <div class="card-info">
-                <h4>Tra sau tran chau</h4>
-                <div class="price_product_item">50,000 đ</div>
-                <a class="btn-price" href="" target="_blank" title="Mua Ngay">Mua ngay</a>
-                <a class="btn-tht" href="">Tìm hiểu thêm</a>
+                <a class="btn-tht" href="/listproduct">See More ----</a>
               </div>
             </div>
           </div>
@@ -84,8 +70,7 @@
               <div class="card-info">
                 <h4>Tra sau tran chau</h4>
                 <div class="price_product_item">50,000 đ</div>
-                <a class="btn-price" href="" target="_blank" title="Mua Ngay">Mua ngay</a>
-                <a class="btn-tht" href="">Tìm hiểu thêm</a>
+                <a class="btn-tht" href="/listproduct">See More ----</a>
               </div>
             </div>
           </div>
