--- a/src/app/adminupdateproduct/adminupdateproduct.component.html
+++ b/src/app/adminupdateproduct/adminupdateproduct.component.html
@@ -15,10 +15,10 @@
         </div>
 
 
-        <div class="form-outline mb-4">
+        <!-- <div class="form-outline mb-4">
             <input type="text" id="idKind" class="form-control" name="idKind" [(ngModel)]="product.idKind" />
             <label class="form-label" for="bread">IDkind</label>
-        </div>
+        </div> -->
 
         <div class="form-outline mb-4">
             <input type="file" id="image" class="form-control" name="image" [(ngModel)]="product.image" />
