--- a/src/app/listproduct/listproduct.component.css
+++ b/src/app/listproduct/listproduct.component.css
@@ -2392,3 +2392,94 @@ div#preloader {
     border: 2px solid #EA8025;
     padding: 6px 15px;
 }
+/* /////////////////////////////////// */
+* {
+	box-sizing: border-box;
+  }
+  
+  body {
+	font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Float four columns side by side */
+  .column {
+	float: left;
+	width: 33%;
+	padding: 30px 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding */
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+	content: "";
+	display: table;
+	clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+	.column {
+	  width: 100%;
+	  display: block;
+	  margin-bottom: 20px;
+	}
+  }
+  
+  /* Style the counter cards */
+  .card {
+	box-shadow: 0 4px 8px 0 rgba(152, 219, 26, 0.2);
+	padding: 16px;
+	text-align: left;
+	background-color: #f1f1f1;
+	width: 22rem;
+  }
+  .card h4 {
+	  font-size: 18px;
+	  font-weight: bold;
+  }
+  .card-info a:hover{
+	  background-color: rgb(3, 233, 107);
+  }
+  .card .card-img {
+	  width: 300px;
+	  height: 300px;
+  }
+  .card-info{
+	  margin-top: 20px;
+  }
+  .card-info .btn-price{
+    font-size: 16px;
+    font-weight: 700;
+    color: #fff;
+    display: inline-block;
+    font-family: 'BebasNeue','Lato', "Times New Roman", serif;
+    background: transparent;
+    vertical-align: middle;
+    border: 2px solid #EA8025;
+    padding: 0px 15px;
+	color: #EA8025;
+}
+
+.card-info .btn-tht {
+    font-size: 16px;
+    font-weight: 700;
+    color: #EA8025;
+    display: inline-block;
+    font-family: 'BebasNeue','Lato', "Times New Roman", serif;
+    border: 2px solid #EA8025;
+    vertical-align: middle;
+    margin-left: 15px;
+    position: relative;
+    padding: 0px 15px;
+    transition: .3s;
+    overflow: hidden;
+}
+  .card .card-info .price_product_item {
+    font-size: 24px;
+    font-family: 'BebasNeue','Lato', "Times New Roman", serif;
+    font-weight: 700;
+    color: #EA8025;
+    margin-bottom: 10px;
+}
